tests/NormalTests/paczka1/fuzzy1/14573867.err
Error in line 7: 8os9Ti S144 13,7
Error in line 5: xUTK0Qb S889 99,0
Error in line 9: 8os9Ti S889 69,5
Error in line 12: 8os9Ti S93 64,4
Error in line 14: 8os9Ti S144 43,7
Error in line 21: xUTK0Qb S144 12,1
Error in line 39: xUTK0Qb S144 18,9
